# zem

./: .dvcignore.template  .gitignore  AGENTS.md  CHANGELOG.md  README.md  output_simplified.txt  parameters.yml  pyproject.toml  research.md
.agent/workflows/: release.md
.github/workflows/: deploy.yml  pr_agent.yaml  pypi-publish.yml
data/: TextGen_dataset.json  big_data_output.parquet  big_data_sim.parquet  nemo_full_stack_result.parquet  output_result.jsonl  sample.jsonl
scripts/: bump_version.py  setup_audio.py  setup_audio.sh
src/xfmr_zem/: __init__.py  cli.py  client.py  schemas.py  server.py  zenml_wrapper.py
src/xfmr_zem/audio/: README.md  __init__.py  config.py  pipeline.py
src/xfmr_zem/audio/components/asr/: transcriber.py
src/xfmr_zem/audio/components/asr/icefall/egs/iwslt22_ta/ASR/local/: cer.py  cuts_validate.py
src/xfmr_zem/audio/components/asr/icefall/egs/iwslt22_ta/ST/local/: prepare_lexicon.py  prepare_transcripts.py  transcript_cleaning.py
src/xfmr_zem/audio/components/asr/icefall/egs/librispeech/ASR/tiny_transducer_ctc/: README.md
src/xfmr_zem/audio/components/asr/icefall/egs/mgb2/ASR/local/: prepare_mgb2_lexicon.py
src/xfmr_zem/audio/components/asr/icefall/egs/multi_conv_zh_es_ta/ST/local/: prepare_st_transcripts.py  prepare_transcripts.py
src/xfmr_zem/audio/components/asr/icefall/egs/swbd/ASR/conformer_ctc/: sclite_scoring.py
src/xfmr_zem/audio/components/asr/icefall_scripts/: beam_search.py
src/xfmr_zem/audio/components/diarization/: diarizer.py
src/xfmr_zem/audio/components/diarization/diarizen_lib/diarizen/pipelines/: inference.py
src/xfmr_zem/audio/components/diarization/diarizen_lib/pyannote/audio/core/: inference.py  model.py
src/xfmr_zem/audio/components/diarization/diarizen_lib/pyannote/audio/pipelines/: speaker_diarization.py
src/xfmr_zem/audio/components/diarization/diarizen_lib/pyannote/audio/tasks/segmentation/: mixins.py
src/xfmr_zem/audio/components/slicer/: slicer.py
src/xfmr_zem/orchestrators/: parallel_local.py
src/xfmr_zem/servers/argilla/: __init__.py  parameters.yml  server.py
src/xfmr_zem/servers/argilla/factory/: __init__.py  agreement.py  connection.py  dataset.py  export.py  record.py  user.py
src/xfmr_zem/servers/audio/: parameters.yml  pipeline.py  server.py
src/xfmr_zem/servers/audio/components/asr/: __init__.py  transcriber.py
src/xfmr_zem/servers/audio/components/diarization/: __init__.py  diarizer.py
src/xfmr_zem/servers/audio/components/merging/: __init__.py  merger.py
src/xfmr_zem/servers/audio/components/preprocessing/: __init__.py  preprocessor.py
src/xfmr_zem/servers/audio/components/slicer/: __init__.py  slicer.py
src/xfmr_zem/servers/audio/core/: __init__.py  interfaces.py  models.py
src/xfmr_zem/servers/corrector/: README.md  engines.py  parameters.yml  server.py
src/xfmr_zem/servers/data_juicer/: parameter.yaml  server.py
src/xfmr_zem/servers/deduplication/: minhash.py  parameter.yaml  parameters.yaml  server.py  text_processing.py
src/xfmr_zem/servers/doc_parser/: README.md  corrector.py  ocr.py  parameters.yml  requirements.txt  server.py
src/xfmr_zem/servers/doc_parser/corrector/: __init__.py  corrector.py  legalprotonx.py
src/xfmr_zem/servers/doc_parser/helper/: __init__.py  landing_visualizer.py  markdown_extractor.py  paddle_visualizer.py
src/xfmr_zem/servers/doc_parser/model_config/: landingade.yaml  legalprotonx.yaml
src/xfmr_zem/servers/doc_parser/ocr/: __init__.py  glmocr.py  landingade.py  ocr.py  paddleocr_vlm.py
src/xfmr_zem/servers/evaluator/: parameters.yml  server.py
src/xfmr_zem/servers/evaluator/factory/: dataset.py  dataset_factory.py  evaluate.py  evaluate_factory.py  metric.py  metric_factory.py  models.py  models_factory.py  schemas.py  task.py  task_factory.py
src/xfmr_zem/servers/evaluator/factory/eval_engines/: cloud.py  local.py
src/xfmr_zem/servers/evaluator/factory/prompt/: evaluate_prompt.py  generate_prompt.py
src/xfmr_zem/servers/instruction_gen/: parameter.yaml  server.py
src/xfmr_zem/servers/io/: parameter.yaml  server.py
src/xfmr_zem/servers/llm/: parameters.yml  server.py
src/xfmr_zem/servers/nemo_curator/: parameters.yml  server.py
src/xfmr_zem/servers/ocr/: engines.py  install_models.py  parameters.yml  server.py
src/xfmr_zem/servers/ocr/deepdoc_vietocr/: __init__.py  implementations.py  layout_recognizer.py  ocr.py  phases.py  pipeline.py  recognizer.py  table_structure_recognizer.py
src/xfmr_zem/servers/ocr/deepdoc_vietocr/utils/: __init__.py  file_utils.py
src/xfmr_zem/servers/ocr/deepdoc_vietocr/vietocr/model/: transformerocr.py
src/xfmr_zem/servers/ocr/deepdoc_vietocr/vietocr/model/backbone/: cnn.py  vgg.py
src/xfmr_zem/servers/ocr/deepdoc_vietocr/vietocr/tool/: config.py  translate.py
src/xfmr_zem/servers/profiler/: parameters.yml  server.py
src/xfmr_zem/servers/sinks/: parameters.yml  server.py
src/xfmr_zem/servers/unstructured/: parameters.yml  server.py
src/xfmr_zem/servers/voice/: engines.py  parameters.yml  server.py
src/xfmr_zem/ui/: backend.py
src/xfmr_zem/ui/frontend/: package-lock.json  package.json
src/xfmr_zem/ui/frontend/app/: layout.tsx  page.tsx
src/xfmr_zem/utils/: __init__.py  dvc_metadata.py
templates/: dvc-config.template
tests/audio/: test_merger.py  test_models.py  test_slicer.py
tests/manual/: audio_test.yaml  big_data_reference_test.yaml  caching_test.yaml  dag_test.yaml  dedup_tools_test.yaml  doc_parser.yaml  evaluate.yaml  full_pipeline_test.yaml  hf_ocr_test.yaml  io_test.yaml  legal_dedup_2stage_pipeline.yaml  llm_test.yaml  multimodal_test.yaml  nemo_full_stack_demo.yaml  nemo_gpu_demo.yaml  ocr_test.yaml  parallel_test.yaml  parquet_test.yaml  pdf_ocr_test.yaml  phase4_test.yaml  profiler_test.yaml  standard_data_pipeline.yaml  viet_ocr_test.yaml  voice_test.yaml
website/: index.html  style.css
website/docs/: docs.css  index.html
