[project]
name = "xfmr-zem"
version = "0.3.11"
description = "Zem: Unified Data Pipeline Framework (ZenML + NeMo Curator + DataJuicer) for multi-domain processing"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
authors = [
    {name = "Khai Hoang", email = "khaihq@vbiacademy.edu.vn"}
]
keywords = ["xfmr-zem", "data-pipeline", "zenml", "nemo-curator", "data-juicer", "mlops"]

# ── Core: chỉ những gì cần thiết để chạy Zem Engine + CLI ──
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pyarrow>=15.0.0",
    "fastmcp>=0.1.0",
    "mcp>=0.1.0",
    "zenml[local,server]>=0.75.0",
]

[project.urls]
Homepage = "https://github.com/OAI-Labs/xfmr-zem"
Repository = "https://github.com/OAI-Labs/xfmr-zem"
Issues = "https://github.com/OAI-Labs/xfmr-zem/issues"
Changelog = "https://github.com/OAI-Labs/xfmr-zem/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# ── NLP / Text Processing ─────────────────────────────────────────────────────
nemo = [
    "nemo-curator>=0.5.0",
    "dask-cuda>=24.0.0",
    "ftfy>=6.3.1",
]
datajuicer = [
    "py-data-juicer>=1.0.0",
]
deduplication = [
    "datasketch>=1.6.0",
    "underthesea>=6.8.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]

# ── Document / Multimodal ─────────────────────────────────────────────────────
document = [
    "unstructured[all-docs]>=0.16.0",
    "python-magic>=0.4.27",
]
audio = [
    "lhotse>=1.24.0",
    "sentencepiece>=0.1.99",
]
vn_asr = [
    "pyvi>=0.1.1",
    "transformers>=4.40.0",
]
ocr = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "landingai-ade>=1.5.0",
    "transformers>=4.40.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pillow>=10.0.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "shapely",
    "pyclipper",
    "einops",
    "ruamel.yaml>=0.17.0",
    "cachetools>=5.0.0",
    "numpy<2.0.0",
]
corrector = [
    "transformers>=4.55.2",
    "torch>=2.5.0",
    "torchvision>=0.20.1",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "numpy<2.0.0",
]

# ── Audio / Voice ──────────────────────────────────────────────────────────────
voice = [
    "pyannote-audio>=3.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "noisereduce>=3.0.0",
    "pyloudnorm>=0.1.0",
    "pydantic-settings>=2.0.0",
    "torchaudio>=2.1.0",
    "einops>=0.7.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.0",
    "onnxruntime-gpu>=1.16.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pesq>=0.0.4",
    "pystoi>=0.3.3",
    "scipy>=1.11.0",
    "tabulate>=0.9.0",
    "toml>=0.10.0",
    "torchinfo>=1.8.0",
    "accelerate>=0.25.0",
    "thop>=0.1.1",
]

# ── LLM / Evaluation ──────────────────────────────────────────────────────────
evaluator = [
    "opik>=1.10.9",
    "litellm>=1.0.0",
]

# ── Argilla: Data Annotation Platform ─────────────────────────────────────────
argilla = [
    "argilla>=2.0.0",
    "scikit-learn>=1.3.0",
    "krippendorff>=0.6.0",
]

# evaluator-local: chạy test/eval model local (HuggingFace)
evaluator-local = [
    "opik>=1.10.9",
    "litellm>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
]

# ── Web UI ─────────────────────────────────────────────────────────────────────
ui = [
    "fastapi",
    "uvicorn",
    "python-multipart",
]

# ── Dev / Test ─────────────────────────────────────────────────────────────────
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# ── Bundles ───────────────────────────────────────────────────────────────────
# Cài đầy đủ NLP stack (không bao gồm GPU/OCR/Voice)
nlp = [
    "nemo-curator>=0.5.0",
    "dask-cuda>=24.0.0",
    "ftfy>=6.3.1",
    "py-data-juicer>=1.0.0",
    "datasketch>=1.6.0",
    "underthesea>=6.8.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
# Cài tất cả (trừ GPU-only tools)
all = [
    "nemo-curator>=0.5.0",
    "dask-cuda>=24.0.0",
    "ftfy>=6.3.1",
    "py-data-juicer>=1.0.0",
    "datasketch>=1.6.0",
    "underthesea>=6.8.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "unstructured[all-docs]>=0.16.0",
    "python-magic>=0.4.27",
    "openai-whisper",
    "librosa",
    "soundfile",
    "opik>=1.10.9",
    "fastapi",
    "uvicorn",
    "python-multipart",
]


[project.scripts]
zem = "xfmr_zem.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xfmr_zem"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]


